--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,12 +10,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NavigationDrawer"
+        android:theme="@style/Theme.NavigationDrawerFragments"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Base.Theme.NavigationDrawer.MyThemeNoActionBar">
+            android:theme="@style/Theme.NavigationDrawerFragments.MyThemeNoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
